[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retools"
version = "0.1.0"
description = "regex to dataclass extraction"
requires-python = ">=3.8"
authors = [
  { name = "John Lin" },
  { name = "Codex (GPT-5.2)" }
]

[tool.setuptools]
py-modules = ["retools"]
